Implemented script upload Implemented scripts view Script upload view

--- a/app/components/app/app.component.html
+++ b/app/components/app/app.component.html
@@ -1,6 +1,7 @@
 <nav>
     <a data-ng-link="['Welcome']">Home</a>
-    <a data-ng-link="['Script']">Script</a>
+    <a data-ng-link="['Upload']">Upload</a>
+    <a data-ng-link="['Scripts']">Scripts</a>
 </nav>
 
 <ng-outlet></ng-outlet>
